Fixed logo size and positioning on tablet size and larger

--- a/widgeteer.css
+++ b/widgeteer.css
@@ -187,6 +187,10 @@
 }
 
 @media(min-width: 768px) {
+  #widget-panel .panel-container h1 img {
+    max-width: 250px;
+  }
+
   #widget-panel .verticals-list li .verticals-list__link {
     flex-flow: row wrap;
   }
@@ -206,6 +210,12 @@
 
   #widget-panel .verticals-list li .verticals-list__link .text-wrapper h3 {
     font-size: 16px;
+  }
+}
+
+@media(min-width: 992px){
+  #widget-panel .panel-container h1 img {
+    margin: 0 auto 0 0;
   }
 }
 
